--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <main class="container mx-auto">
         <!-- women -->
         <section class="my-4 pb-24">
-            <h2 class="text-4xl sm:text-5xl font-bold">Women Jackects</h2>
+            <h2 class="text-3xl text-center sm:text-5xl font-bold">Women Jackects</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg rounded-lg">
                     <div class="p-5 bg-slate-100 rounded-xl cursor-pointer hover:skew-x-3 ease-linear duration-200"><img
@@ -104,7 +104,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -121,7 +121,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -138,7 +138,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -153,7 +153,7 @@
         <!-- men  -->
 
         <section class="my-4 pb-24">
-            <h2 class="text-4xl sm:text-5xl font-bold">Men Jackects</h2><br>
+            <h2 class="text-3xl text-center sm:text-5xl font-bold">Men Jackects</h2><br>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg rounded-lg">
                     <div class="p-5 bg-slate-100 rounded-xl cursor-pointer hover:skew-y-3 ease-linear duration-200"><img
@@ -162,7 +162,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -179,7 +179,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
@@ -196,7 +196,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet, asperiores provident? Commodi?
                     </p>
                     <div class="flex justify-between">
-                        <h2 class="text-5xl font-bold text-price">$234</h2>
+                        <h2 class="md:text-5xl text-4xl font-bold text-price">$234</h2>
                         <button class="uppercase bg-[#A4BC46] py-4 px-7 text-white font-semi-bold rounded-xl">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline" fill="none"
                                 viewBox="0 0 24 24" stroke="currentColor">
